--- a/Simulator.html
+++ b/Simulator.html
@@ -20,6 +20,21 @@ user-scalable=no">
       background: linear-gradient(13.74deg, rgba(255, 255, 255, 0.5) 31.65%, rgba(208, 222, 234, 0.5) 103.75%);
     }
 
+    font1 {
+      font-family: 'Poppins';
+      font-style: normal;
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 21px;
+    }
+    font2 {
+      font-family: 'Poppins';
+      font-style: normal;
+      font-weight: 600;
+      font-size: 16px;
+      line-height: 24px;
+    }
+
     button {
       font-family: 'Lato';
       font-style: normal;
@@ -1783,12 +1798,17 @@ vec2 saw(vec2 x)
 
 void main()
 {
-    float border = 4.;
-    float edge = 1.;
-    vec2 pix = vUV.xy*dims*vec2(width, height);
-    if(pix.x >= dims.x*width-border) edge = 0.;
-    if(pix.y <= border*2.) edge = 0.;
-    gl_FragColor = vec4(flux(vUV.z*PI/3.).bgr*(1.-edge)+edge, 1.);
+    float border = 6.;
+    float edgeA = 0.;
+    float edgeB = 0.;
+    vec2 size = dims*vec2(width, height);
+    vec2 uv = vUV.xy*2.-1.;
+    vec2 uv2 = uv-vec2(-1., 1.)*border/size*2.;
+    uv = sign(uv)*pow(abs(uv), vec2(16.));
+    uv2 = sign(uv2)*pow(abs(uv2), vec2(16.));
+    edgeA = smoothstep(0., 1., 16.*((1.-border/length(size)-length(uv2))));
+    edgeB = smoothstep(0., 1., 16.*((1.-border/length(size)-length(uv))));
+    gl_FragColor = vec4(1.)*edgeA+vec4(flux(vUV.z*PI/3.).bgr, 1.)*(1.-edgeA)*edgeB;
 }`,
           "vertex": `
 precision highp float;
@@ -2304,7 +2324,7 @@ void main(void) {
 
         vertices.push(mesh_trapezoid(trapezoid));
         texcoords.push(mesh_trapezoid(vUV));
-        label_html.push("<i>User " + pledger.name + " Pledged</i><br>" + "<b>Pledged $" + pledger.last_income + "</b><br>");
+        label_html.push("<font1>User " + pledger.name + " Pledged</font1><br>" + "<font2>Pledged $" + pledger.last_income + "</font2><br>");
         label_positions.push([avg_x, current_pledge / max_transferable + avg_y])
         
         /* Further reduction possible:
@@ -2353,16 +2373,17 @@ void main(void) {
           [2. / 3., (current_receive + receiver.last_income) / max_transferable, 1. / 3., receiver.last_income / max_transferable],
           [1, (current_receive + receiver.last_income) / max_transferable, 1. / 3., receiver.last_income / max_transferable]
         ]
+        var index = i+window.pledgers.length
         let vUV = [
-          [0, 0, i, 0],
-          [1, 0, i, 0],
-          [1, 1, i, 1],
-          [0, 1, i, 1]
+          [1, 0, index, 0],
+          [0, 0, index, 0],
+          [0, 1, index, 1],
+          [1, 1, index, 1]
         ]
 
         vertices.push(mesh_trapezoid(trapezoid));
         texcoords.push(mesh_trapezoid(vUV));
-        label_html.push("<i>User " + receiver.name + " Received</i><br>" + "<b>Received $" + receiver.last_income + "</b><br>");
+        label_html.push("<font1>User " + receiver.name + " Receives</font1><br>" + "<font2>Receives $" + receiver.last_income + "</font2><br>");
         label_positions.push([avg_x, current_receive / max_transferable + avg_y])
         /* Further reduction possible:
         if (point_in_triangle(window.mouse_canvas_position, [trapezoid[0], trapezoid[1], trapezoid[2]]) ||
@@ -2598,7 +2619,7 @@ void main(void) {
     <div class=""
       style="position:absolute; z-index: 3; left:25%; width: 50%; height:auto; border: 1px #DBDBDB solid; text-align:center; background-color: #FFFFFF;">
       <label style="width: 25%; display:inline-block; border: none;">Amount:</label>
-      <input id="amount" type="number" value="5" min="0" step="1"
+      <input id="amount" type="number" value="10" min="0" step="1"
         style="border: none; display:inline-block; width:33%; text-align: center;">
       </input>
       <label style="width: 25%; display:inline-block; border: none;">$ USD</label>
@@ -2608,3 +2629,5 @@ void main(void) {
     </div>
   </div>
 </body>
+
+</html>
