--- a/RealTimeSimulator.html
+++ b/RealTimeSimulator.html
@@ -29,10 +29,10 @@
         Start adding members to see how it works.
       </p>
 
-      <div id="canvas_div">
-        <div style="width:100%; height: 100%; position: absolute;" id="label_div">
+      <div id="gis_canvas_div">
+        <div style="width:100%; height: 100%; position: absolute;" id="gis_label_div">
         </div>
-        <div id="options_div">
+        <div id="gis_options_div">
         </div>
       </div>
     </div>
@@ -2116,7 +2116,7 @@ void main(void) {
       var user_index = user_counter++
       event_list.push({
         type: EVENT_TYPES.JOIN,
-        name: user_index,
+        name: "User #"+user_index,
         income: income_or_expenses
       })
     }
@@ -2144,7 +2144,7 @@ void main(void) {
         name: user_name,
         income: income_or_expenses
       })
-      document.getElementById('options_div').style.display = 'hidden'
+      document.getElementById('gis_options_div').style.display = 'hidden'
     }
 
     function get_amount() {
@@ -2419,7 +2419,7 @@ void main(void) {
           [0, (current_pledge + pledger.last_income) / max_transferable, 1. / 3., pledger.last_income / max_transferable]
         ]
 
-        label_html.push("<div class='gis_user_wrapper'><div class='gis_user_name'>User " + pledger.name + " Pledged</div>" + "Pledged $" + pledger.last_income + "</div>");
+        label_html.push("<div class='gis_user_wrapper'><div class='gis_user_name'>" + pledger.name + " Pledged</div>" + "Pledged $" + pledger.last_income + "</div>");
         label_positions.push([avg_x, current_pledge / max_transferable + avg_y, 1. / 3., (pledger.last_income) / max_transferable])
 
         if (point_in_triangle(mouse_canvas_position, [trapezoid[0], trapezoid[1], trapezoid[2]]) ||
@@ -2431,8 +2431,8 @@ void main(void) {
               <label style="display:inline-block;">Amount:</label>
             <input id="pledge_amount" type="number" value="` + pledger.last_income + `" step="1" style="display:inline-block; width:64px">`
 
-              show_option("User" + pledger.name + ":" +
-                "<br><button onclick=\"user_leave_event(\'" + pledger.name + "\')\">Make Leave</button>");
+              show_option("<label class='gis_options_title'>" + pledger.name + "</label>"+
+                "<br><button class='gis_leave_button' onclick=\"user_leave_event(\'" + pledger.name + "\')\">Make Leave</button>");
             }
           }(pledger)
         }
@@ -2460,7 +2460,7 @@ void main(void) {
           [2. / 3., (current_receive + receiver.last_income) / max_transferable, 1. / 3., receiver.last_income / max_transferable],
           [1, (current_receive + receiver.last_income) / max_transferable, 1. / 3., receiver.last_income / max_transferable]
         ]
-        label_html.push("<div class='gis_user_wrapper'><div class='gis_user_name'>User " + receiver.name + " Receives</div>" + "Receives $" + receiver.last_income + "</div>");
+        label_html.push("<div class='gis_user_wrapper'><div class='gis_user_name'>" + receiver.name + " Receives</div>" + "Receives $" + receiver.last_income + "</div>");
         label_positions.push([avg_x, current_receive / max_transferable + avg_y, 1. / 3., (receiver.last_income) / max_transferable])
 
         if (point_in_triangle(mouse_canvas_position, [trapezoid[0], trapezoid[1], trapezoid[2]]) ||
@@ -2472,8 +2472,8 @@ void main(void) {
               <label style="display:inline-block;">Amount:</label>
             <input id="receive_amount" type="number" value="` + receiver.last_income + `" step="1" style="display:inline-block; width:64px">`
 
-              show_option("User" + receiver.name + ":" +
-                "<br><button onclick=\"user_leave_event(\'" + receiver.name + "\')\">Make Leave</button>");
+              show_option("<label class='gis_options_title'>" + receiver.name + "</label>" +
+                "<br><button class='gis_leave_button' onclick=\"user_leave_event(\'" + receiver.name + "\')\">Make Leave</button>");
             }
           }(receiver)
         }
@@ -2528,10 +2528,10 @@ void main(void) {
           point_in_triangle(mouse_canvas_position, [trapezoid[0], trapezoid[3], trapezoid[2]]))) {
           mouse_under = true;
 
-          var make_payment = `<label style="display:inline-block;">Amount:</label>
-									<input id="payment_amount` + i + `" type="number" value="` + payment.amount + `" max="` + payment.amount + `"step="1" style="display:inline-block; width:64px">`
-          payment_message += (payment_message ? "<br>" : "") + "Payment from User" + payment.from + " to User" + payment.to + "<br>" + make_payment +
-            "<button onclick=\"document.getElementById('options_div').style.display='hidden'; hide_option(); user_pay_event(\'" + payment.from + "\', \'" + payment.to + "\', parseFloat(document.getElementById('payment_amount" + i + "').value))\">Make Payment</button>"
+          var make_payment = `<div class="gis_payment_wrapper"> <span class="gis_currency_input">$
+									<input id="payment_amount` + i + `" type="number" value="` + payment.amount + `" max="` + payment.amount + `"step="1" class="gis_payment_input"></span>`
+          payment_message += (payment_message ? "<br>" : "") + "<label class='gis_options_title'>Send Payment</label><br>"+ make_payment +
+            "<button class='gis_payment_button' onclick=\"document.getElementById('gis_options_div').style.display='hidden'; hide_option(); user_pay_event(\'" + payment.from + "\', \'" + payment.to + "\', parseFloat(document.getElementById('payment_amount" + i + "').value))\">Send Payment</button></div>"
 
           payment_clicked = function () {
             show_option(payment_message);
@@ -2569,8 +2569,8 @@ void main(void) {
       canvas.style.position = 'relative';
       canvas.style.width = '100%';
       canvas.style.height = '100%';
-      var canvas_div = document.getElementById("canvas_div");
-      var label_div = document.getElementById("label_div")
+      var canvas_div = document.getElementById("gis_canvas_div");
+      var label_div = document.getElementById("gis_label_div")
       canvas_div.append(canvas);
 
       function res() {
@@ -2593,8 +2593,8 @@ void main(void) {
           hide_option()
         }
       };
-      var options_div = document.getElementById("options_div")
-      var label_div = document.getElementById("label_div")
+      var options_div = document.getElementById("gis_options_div")
+      var label_div = document.getElementById("gis_label_div")
 
       options_div.onmouseenter = function (e) {
         mouse_busy = true;
@@ -2643,7 +2643,7 @@ void main(void) {
             }
 
 
-            return acc + '<div class="wealth_div ' + (is_receiver ? "receiver" : "pledger") + '_div" style="box-shadow: 4px 4px 0px ' + rgba + '; transform:translate(-50%,-50%); position:absolute; text-align:center; display:block; left: ' + x + 'px; top: ' + y + 'px;  width: ' + w + 'px; height: ' + h + 'px; color: #000 !important; background: #fff; border: 1px solid #D0DEEA;"><div class="label_div">' + html + '</div></div>'
+            return acc + '<div class="wealth_div ' + (is_receiver ? "receiver" : "pledger") + '_div" style="box-shadow: 4px 4px 0px ' + rgba + '; transform:translate(-50%,-50%); position:absolute; text-align:center; display:block; left: ' + x + 'px; top: ' + y + 'px;  width: ' + w + 'px; height: ' + h + 'px; color: #000 !important; background: #fff; border: 1px solid #D0DEEA;"><div class="gis_label_div">' + html + '</div></div>'
           }, "")
           html += total_html.reduce((acc, html, index) => {
             var x = Math.floor(total_positions[index][0] * canvas_div.offsetWidth)
